@@ -28,7 +28,7 @@ Vue.component('lms-information-dialog', {
     <ul>
      <template v-for="(info, index) in server"><li>{{info.label}}: {{info.text}}</li></template>
     </ul>
-    <v-btn @click="openSettings" v-if="unlockAll" flat><v-icon class="btn-icon">{{TB_SERVER_SETTINGS.icon}}</v-icon>{{TB_SERVER_SETTINGS.title}}</v-btn>
+    <v-btn @click="openServerSettings" v-if="unlockAll" flat><v-icon class="btn-icon">{{TB_SERVER_SETTINGS.icon}}</v-icon>{{TB_SERVER_SETTINGS.title}}</v-btn>
     <div class="dialog-padding"></div>
    </div>
 
@@ -70,10 +70,11 @@ Vue.component('lms-information-dialog', {
     <template v-for="(item, index) in players">
      <li>
       <v-icon v-if="item.icon.icon" style="margin-top:-4px">{{item.icon.icon}}</v-icon><img v-else class="svg-img" style="margin-top:-4px" :src="item.icon.svg | svgIcon(darkUi)"></img> {{item.name}}
-      <ul style="margin-bottom:16px">
+      <ul>
        <template v-for="(info, index) in item.info"><li v-if="info!=''">{{info}}</li></template>
       </ul>
      </li>
+     <v-btn @click="openPlayerSettings(item)" flat><v-icon class="btn-icon">{{TB_PLAYER_SETTINGS.icon}}</v-icon>{{TB_PLAYER_SETTINGS.title}}</v-btn>
     </template>
    </ul>
 
@@ -333,11 +334,14 @@ Vue.component('lms-information-dialog', {
                 return str;
             }
         },
-        openSettings() {
+        openServerSettings() {
             bus.$emit('dlg.open', 'iframe', '/material/settings/server/basic.html', TB_SERVER_SETTINGS.title+this.serverName,
                         // Keep in sync with toolbar.js!
                         [{title:i18n('Shutdown'), text:i18n('Stop Logitech Media Server?'), icon:'power_settings_new', cmd:['stopserver'], confirm:i18n('Shutdown')},
                          {title:i18n('Restart'), text:i18n('Restart Logitech Media Server?'), icon:'replay', cmd:['restartserver'], confirm:i18n('Restart')}]);
+        },
+        openPlayerSettings(player) {
+            bus.$emit('dlg.open', 'playersettings', player);
         },
         rescan(item) {
             bus.$emit('showMessage', item.name);
